--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -41,13 +41,19 @@
         padding: 40px 0;
 
         &__logo {
-            height: 40px;
+            height: 120px;
         }
 
         &__text {
-            font-size: 22px;
+            font-size: 32px;
             line-height: 24px;
             margin: 24px 0;
+        }
+    }
+
+    @media (max-width: 1024px) {
+        &__logo {
+            height: 120px;
         }
     }
 }
